    * [#9][#16] Reduced raising when DN value is invalid.
      [danger1986][Alexey.Chebotar]
    * [#10][#12] Fixed needless ',' is appeared. [michael.j.konopka]
    * [#11] Required missing 'active_ldap/user_password'. [michael.j.konopka]
    * [#13] Returned entries if has_many :wrap has nonexistent entry.
      [ingersoll]
    * [#15] Fixed type error on computing DN. [ery.lee]

1.0.1:
  * Fixed GetText integration.
  * Fixed ActiveLdap::Base.find with ActiveLdap::DN. (Reported by Jeremy Pruitt)
  * Fixed associated bugs. (Reported by CultureSpy)
  * Supported ActiveLdap::Base#attribute_present? with nonexistence attribute.
    (Reported by Matt Mencel)
  * Added ActiveLdap::Base#.to_ldif_record.
  * Improved inspect.
  * Supported ActiveSupport 2.1.0.

1.0.0:
  * Fixed GSSAPI auth failure. [#18764] (Reported by Lennon Day-Reynolds)
  * Supported Symbol as :dn_attribute_value. [#18921] (Requested by Nobody)
  * Improved DN attribute detection. (Reported by Iain Pople)
  * Avoided unnecesally modify operation. (Reported by Tilo)

0.10.0:
  * Implemented LDIF parser.
  * Improved validation:
    * Added some validations.
    * Fixed SINGLE-VALUE validation. [#17763]
      (Reported by Naoto Morishima)
  * Supported JNDI as backend.
  * Improved auto reconnection.
  * Supported Rails 2.0.2.
  * Improved performance. (4x)
  * [API CHANGE]: removed "'binary' =>" from getter result.
    e.g., before:
            user.user_certificate # => {"binary" => "..."}
           now:
            user.user_certificate # => "..."
  * Added :excluded_classed ldap_mapping option.
  * Logged operation time used for LDAP operation.
  * Improved API:
    * Accepted non String value for find(:value => XXX).
      (Suggested by Marc Dequèn)
    * Accepted DN as ActiveLdap::Base.new(XXX).
      (Reported by Jeremy Pruitt)
    * Treated empty password for smiple bind as anonymous bind.
      (Suggested by Bodaniel Jeans)